02-talos/tool-pods/deug-talos.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debugpod04
  namespace: kube-system
spec:
  hostPID: true
  containers:
    - name: debugcontainer
      image: ubuntu:24.04
      stdin: true
      tty: true
      securityContext:
        privileged: true
      volumeMounts:
        - name: dev-mount
          mountPath: /dev
        - name: host-mount
          mountPath: /host
  volumes:
    - name: dev-mount
      hostPath:
        path: /dev
    - name: host-mount
      hostPath:
        path: /
  nodeSelector:
    kubernetes.io/hostname: cp-node03
