02-talos/tool-pods/pod-ubuntu-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pvc-pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu:22.04
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-fs-pvc
